Sign In and Out

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
     <link rel="stylesheet" href="style.css">
@@ -16,6 +16,7 @@
         <p>
           Online Congress registration & payment form
         </p>
+        <button id="signout-btn" hidden>Sign Out</button>
     </header>
     <hr>
     <section>
@@ -56,7 +57,10 @@
           <button type="submit">Go</button>
         </form>
       </div>
-    </section>    
+    </section>   
+    <footer class="fixed">
+      North West Junior Congress Sponsored by <a href="www.chesstraining.app" target="_blank">ChessTraining.app</a> - Registration Site Created by <a target="_blank" href="https://keeghanm.github.io/">Keeghan</a>
+    </footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
