Start of Participant List

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <hr>
     <section>
       <div id="login-form-container">
-        <h2>1. Register or Login</h2>
+        <h2>Register or Login</h2>
         <p>Create an account so you can login later to manage your registration</p>
         <form id="login-form">
           <label for="login-email">Email</label>
@@ -36,6 +36,11 @@
           </div>
           <button type="submit">Go</button>
         </form>
+      </div>
+      <div id="participant-list-container" hidden>
+        <h2>Current Particpants</h2>
+        <div id="participant-list"></div>
+        <button id="add-particiapnt">Add</button>
       </div>
       <div id="participant-form-container" hidden>
         <h2>2. Participant Details</h2>
@@ -59,7 +64,7 @@
       </div>
     </section>   
     <footer class="fixed">
-      North West Junior Congress Sponsored by <a href="www.chesstraining.app" target="_blank">ChessTraining.app</a> - Registration Site Created by <a target="_blank" href="https://keeghanm.github.io/">Keeghan</a>
+      North West Junior Congress Sponsored by <a href="https://chesstraining.app" target="_blank">ChessTraining.app</a> - Registration Site Created by <a target="_blank" href="https://keeghanm.github.io/">Keeghan</a>
     </footer>
     <script type="module" src="/main.js"></script>
   </body>
