--- a/src/index.html
+++ b/src/index.html
@@ -4,33 +4,41 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css">
-    <link rel="stylesheet" href="style.css">
-    <title>North West Junior Congress</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css"
+    />
+    <title>Merseyside Junior Chess Rapidplay Congress</title>
   </head>
   <body>
     <header>
-        <h1>
-          North West Junior Congress
-        </h1>
-        <p>
-          Online Congress registration & payment form
-        </p>
-        <button id="signout-btn" hidden>Sign Out</button>
+      <h1>Merseyside Junior Chess Rapidplay Congress</h1>
+      <p>Online registration & payment form</p>
+      <button id="signout-btn" hidden>Sign Out</button>
     </header>
-    <hr>
+    <hr />
     <section>
       <div id="login-form-container">
         <h2>Register or Login</h2>
-        <p>Create an account so you can login later to manage your registration</p>
+        <p>
+          Create an account so you can login later to manage your registration
+        </p>
         <form id="login-form">
           <label for="login-email">Email</label>
-          <input type="email" name="login-email" id="login-email" required>
+          <input type="email" name="login-email" id="login-email" required />
           <label for="login-password">Password</label>
-          <input type="password" name="login-password" id="login-password" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+          <input
+            type="password"
+            name="login-password"
+            id="login-password"
+            title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+            required
+          />
           <div id="passwordMessage">
             <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-            <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+            <p id="capital" class="invalid">
+              A <b>capital (uppercase)</b> letter
+            </p>
             <p id="number" class="invalid">A <b>number</b></p>
             <p id="length" class="invalid">Minimum <b>8 characters</b></p>
           </div>
@@ -40,32 +48,63 @@
       <div id="participant-list-container" hidden>
         <h2>Current Particpants</h2>
         <div id="participant-list"></div>
-        <button id="add-particiapnt">Add</button>
+        <button id="add-participant">Add</button>
       </div>
       <div id="participant-form-container" hidden>
-        <h2>2. Participant Details</h2>
-        <p>If you need to add multiple participants, you can do so on the next step</p>
+        <h2>Participant Details <button id="cancel-edit">Back</button></h2>
         <form id="participant-form">
+          <input type="hidden" name="participant-id" id="participant-id" />
           <label for="participant-firstname">First Name*</label>
-          <input type="text" name="participant-firstname" id="participant-firstname" required>
+          <input
+            type="text"
+            name="participant-firstname"
+            id="participant-firstname"
+            required
+          />
           <label for="participant-lastname">Last Name*</label>
-          <input type="text" name="participant-lastname" id="participant-lastname" required>
+          <input
+            type="text"
+            name="participant-lastname"
+            id="participant-lastname"
+            required
+          />
           <label for="participant-dob">Date of Birth*</label>
-          <input type="date" name="participant-dob" id="participant-dob" required>
-          <label for="participant-ecf">ECF Membership Number</label>
-          <input type="text" name="participant-ecf" id="participant-ecf">
-          <label for="participant-rating">ECF Rating</label>
-          <input type="number" name="participant-rating" id="participant-rating">
+          <input
+            type="date"
+            name="participant-dob"
+            id="participant-dob"
+            required
+          />
           <label for="participant-address">Address*</label>
-          <input type="text" name="participant-address" id="participant-address" required>
-          <p>*  Field required</p>
+          <input
+            type="text"
+            name="participant-address"
+            id="participant-address"
+            required
+          />
+          <label for="participant-ecf">ECF Membership Number</label>
+          <input type="text" name="participant-ecf" id="participant-ecf" />
+          <label for="participant-rating">ECF Rating</label>
+          <input
+            type="text"
+            name="participant-rating"
+            id="participant-rating"
+          />
+          <label for="participant-ratingcode">Rating Code</label>
+          <input
+            type="text"
+            name="participant-ratingcode"
+            id="participant-ratingcode"
+          />
+          <p>* Field required</p>
           <button type="submit">Go</button>
         </form>
+        <p id="saving-text" hidden>Saving...</p>
       </div>
-    </section>   
-    <footer class="fixed">
+    </section>
+    <!-- <footer class="fixed">
       North West Junior Congress Sponsored by <a href="https://chesstraining.app" target="_blank">ChessTraining.app</a> - Registration Site Created by <a target="_blank" href="https://keeghanm.github.io/">Keeghan</a>
-    </footer>
+    </footer> -->
     <script type="module" src="/main.js"></script>
   </body>
 </html>
