Ready for Payment

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,12 @@
         <h2>Current Particpants</h2>
         <div id="participant-list"></div>
         <button id="add-participant">Add</button>
+        <div>
+          <span id="payment-text">Price left to pay: £0.00</span
+          ><button id="checkout-button-price_1KWjjIGKmBChKPPmDe6g9E5Q">
+            Pay Now
+          </button>
+        </div>
       </div>
       <div id="participant-form-container" hidden>
         <h2>Participant Details <button id="cancel-edit">Back</button></h2>
