--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,31 @@
   <body>
     <header>
       <h1>Merseyside Junior Chess Rapidplay Congress</h1>
-      <p>Online registration & payment form</p>
+      <p>Online registration & payment</p>
       <button id="signout-btn" hidden>Sign Out</button>
     </header>
     <hr />
+    <section id="congress-details">
+      <p><b>Date: </b>10am - 3pm Saturday 26th March 2022</p>
+      <p>
+        <b>Address: </b
+        ><a href="https://goo.gl/maps/SymBGrgBTbd6EDTn8" target="_blank">Merchant Taylors Boys School</a>
+      </p>
+      <p><b>Rounds: </b>5 Rounds of Rapid Chess</p>
+      <p><b>Sections:</b>
+        <ul>
+          <li>Under 9’s (Y3/Y4)</li>
+          <li>Under 11’s (Y5/Y6)</li>
+          <li>Under 13’s (Y7/Y8)</li>
+          <li>Under 15’s (Y9/Y10)</li>
+          <li>15 and Over (Y11 and above)</li>
+        </ul>
+      </p>
+      <p><b>Entrance Fee: </b>£5 /child</p>
+    </section>
     <section>
       <div id="login-form-container">
-        <h2>Register or Login</h2>
+        <h2>Register/Login</h2>
         <p>
           Create an account so you can login later to manage your registration
         </p>
