--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css"
-    />
-    <title>Merseyside Junior Chess Rapidplay Congress</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- <link rel="icon" type="image/svg+xml" href="favicon.svg" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.css" />
+  <title>Merseyside Junior Chess Rapidplay Congress</title>
+</head>
+
+<body>
+  <div class="full-height">
     <header>
       <h1>Merseyside Junior Chess Rapidplay Congress</h1>
-      <p>Online registration & payment</p>
+      <p>Online registration</p>
       <button id="signout-btn" hidden>Sign Out</button>
     </header>
     <hr />
     <section id="congress-details">
       <p><b>Date: </b>10am - 3pm Saturday 26th March 2022</p>
       <p>
-        <b>Address: </b
-        ><a href="https://goo.gl/maps/SymBGrgBTbd6EDTn8" target="_blank">Merchant Taylors Boys School</a>
+        <b>Address: </b><a href="https://goo.gl/maps/SymBGrgBTbd6EDTn8" target="_blank">Merchant Taylors Boys School</a>
       </p>
       <p><b>Rounds: </b>5 Rounds of Rapid Chess</p>
       <p><b>Sections:</b>
-        <ul>
-          <li>Under 9’s (Y3/Y4)</li>
-          <li>Under 11’s (Y5/Y6)</li>
-          <li>Under 13’s (Y7/Y8)</li>
-          <li>Under 15’s (Y9/Y10)</li>
-          <li>15 and Over (Y11 and above)</li>
-        </ul>
+      <ul>
+        <li>Under 9’s (Y3/Y4)</li>
+        <li>Under 11’s (Y5/Y6)</li>
+        <li>Under 13’s (Y7/Y8)</li>
+        <li>Under 15’s (Y9/Y10)</li>
+        <li>15 and Over (Y11 and above)</li>
+      </ul>
       </p>
       <p><b>Entrance Fee: </b>£5 /child</p>
     </section>
@@ -45,13 +44,9 @@
           <label for="login-email">Email</label>
           <input type="email" name="login-email" id="login-email" required />
           <label for="login-password">Password</label>
-          <input
-            type="password"
-            name="login-password"
-            id="login-password"
+          <input type="password" name="login-password" id="login-password"
             title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-            required
-          />
+            required />
           <div id="passwordMessage">
             <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
             <p id="capital" class="invalid">
@@ -68,10 +63,7 @@
         <div id="participant-list"></div>
         <button id="add-participant">Add</button>
         <div>
-          <span id="payment-text">Price left to pay: £0.00</span
-          ><button id="checkout-button-price_1KWjjIGKmBChKPPmDe6g9E5Q">
-            Pay Now
-          </button>
+          <span id="payment-text">Price to pay: £0.00</span>
         </div>
       </div>
       <div id="participant-form-container" hidden>
@@ -79,56 +71,31 @@
         <form id="participant-form">
           <input type="hidden" name="participant-id" id="participant-id" />
           <label for="participant-firstname">First Name*</label>
-          <input
-            type="text"
-            name="participant-firstname"
-            id="participant-firstname"
-            required
-          />
+          <input type="text" name="participant-firstname" id="participant-firstname" required />
           <label for="participant-lastname">Last Name*</label>
-          <input
-            type="text"
-            name="participant-lastname"
-            id="participant-lastname"
-            required
-          />
+          <input type="text" name="participant-lastname" id="participant-lastname" required />
           <label for="participant-dob">Date of Birth*</label>
-          <input
-            type="date"
-            name="participant-dob"
-            id="participant-dob"
-            required
-          />
+          <input type="date" name="participant-dob" id="participant-dob" required />
           <label for="participant-address">Address*</label>
-          <input
-            type="text"
-            name="participant-address"
-            id="participant-address"
-            required
-          />
+          <input type="text" name="participant-address" id="participant-address" required />
           <label for="participant-ecf">ECF Membership Number</label>
           <input type="text" name="participant-ecf" id="participant-ecf" />
           <label for="participant-rating">ECF Rating</label>
-          <input
-            type="text"
-            name="participant-rating"
-            id="participant-rating"
-          />
+          <input type="text" name="participant-rating" id="participant-rating" />
           <label for="participant-ratingcode">Rating Code</label>
-          <input
-            type="text"
-            name="participant-ratingcode"
-            id="participant-ratingcode"
-          />
+          <input type="text" name="participant-ratingcode" id="participant-ratingcode" />
           <p>* Field required</p>
           <button type="submit">Go</button>
         </form>
         <p id="saving-text" hidden>Saving...</p>
       </div>
     </section>
-    <!-- <footer class="fixed">
-      North West Junior Congress Sponsored by <a href="https://chesstraining.app" target="_blank">ChessTraining.app</a> - Registration Site Created by <a target="_blank" href="https://keeghanm.github.io/">Keeghan</a>
-    </footer> -->
-    <script type="module" src="/main.js"></script>
-  </body>
+  </div>
+  <footer>
+    Sponsored by <a href="https://chesstraining.app" target="_blank">ChessTraining.app</a> - Registration Site Created
+    by <a target="_blank" href="https://keeghanm.github.io/">Keeghan</a>
+  </footer>
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
